SSCSFT-94 Confirm panel composition event moves case to Ready to list